cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

synopsis: AOC 2021 Solutions

-- description:

license: MIT
author:             Brian Magnuson
maintainer:         bdmagnuson@gmail.com

copyright: (C) 2021 Brian Magnuson
-- category:
-- extra-source-files: CHANGELOG.md

library
  exposed-modules:  Aoc2021

  other-modules: Day01,
                 Day02,
                 Day03,
                 Day04,
                 Day05,
                 Day06,
                 Day07,
                 Day08,
                 AocUtils

  hs-source-dirs:   src

  ghc-options: -O2

  default-extensions:    OverloadedStrings
                       , TemplateHaskell
                       , GADTs
                       , TypeFamilies

  build-depends:         base >= 4.13
                       , attoparsec
                       , text
                       , mtl
                       , containers
                       , hashmap
                       , lens

  default-language:    GHC2021

executable Aoc2021
    default-language: Haskell2010
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:         base >= 4.13
                         , attoparsec
                         , text
                         , mtl
                         , containers
                         , hashmap
                         , lens
                         , aoc2021
