cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

synopsis: AOC 2021 Solutions

-- description:

license: MIT
author:             Brian Magnuson
maintainer:         bdmagnuson@gmail.com

copyright: (C) 2021 Brian Magnuson
-- category:
-- extra-source-files: CHANGELOG.md

library
  exposed-modules: Aoc2021.Day01,
                   Aoc2021.Day02,
                   Aoc2021.Day03,
                   Aoc2021.Day04,
                   Aoc2021.Day05,
                   Aoc2021.Day06,
                   Aoc2021.Day07,
                   Aoc2021.Day08,
                   Aoc2021.Day09,
                   Aoc2021.Day10,
                   Aoc2021.Day11,
                   Aoc2021.Day12,
                   Aoc2021.Day13,
                   Aoc2021.Day14,
                   Aoc2021.Day15,
                   Aoc2021.Day16,
                   Aoc2021.Day17,
                   Aoc2021.Day18,
                   Aoc2021.Day19,
                   Aoc2021.Day20,
                   Aoc2021.Day21,
                   Aoc2021.Day22,
                   Aoc2021.Day23,
                   Aoc2021.Day24,
                   Aoc2021.Day25

  other-modules: Aoc2021.AocUtils

  hs-source-dirs:   src

  ghc-options: -O2

  default-extensions:    OverloadedStrings
                       , TemplateHaskell
                       , GADTs
                       , TypeFamilies
                       , ImportQualifiedPost
                       , LambdaCase

  build-depends:         base >= 4.13
                       , attoparsec
                       , text
                       , mtl
                       , containers
                       , hashmap
                       , lens
                       , vector
                       , algebraic-graphs
                       , memoize
                       , transformers
                       , heap

  default-language:    GHC2021

executable Aoc2021
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:         base >= 4.13
                       , aoc2021
                       , criterion

  default-extensions:  ImportQualifiedPost
  ghc-options: -O2
